# employee-attendance-system

./: .railwayrc.json  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  ORACLE_CLOUD_SETUP.md  ORACLE_QUICK_START.md  ORACLE_TROUBLESHOOTING.md  QUICK_DEPLOY.md  RAILWAY_SETUP.md  README.md  RENDER_COMPLETE_GUIDE.md  RENDER_QUICK_START.md  VERCEL_DEPLOYMENT.md  docker-compose.yml
backend/: .env  .env.example  API_DOCUMENTATION.md  Dockerfile  RAILWAY_DOCKER_INFO.md  README_BACKEND.md  pyproject.toml
backend/app/: main.py
backend/app/api/: attendance.py  auth.py  employees.py  leave.py  payroll.py  reports.py
backend/app/core/: __init__.py  config.py  dependencies.py  security.py
backend/app/db/: __init__.py
backend/app/models/: attendance.py  attendance_log.py  audit_log.py  department.py  designation.py  employee.py  holiday.py  leave_request.py  leave_type.py  payroll.py  payslip.py  role.py  user.py
backend/app/schemas/: __init__.py  attendance.py  employee.py  leave.py  payroll.py  user.py
backend/app/services/: attendance_service.py  audit_service.py  employee_service.py  leave_service.py  payroll_service.py  report_service.py
backend/sql/: schema.sql
frontend/: .env.local.example  next.config.js  package.json
frontend/src/pages/: attendance.tsx  dashboard.tsx  employees.tsx  index.tsx  leave.tsx  login.tsx  payroll.tsx  reports.tsx
frontend/src/utils/: apiClient.ts
