[tool.poetry]
name = "employee-attendance-backend"
version = "0.1.0"
description = "Cloud-native employee attendance, leave, and payroll backend"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
SQLAlchemy = "^2.0"
psycopg = {extras = ["binary"], version = "^3.2"}
pydantic = "^2.8"
pydantic-settings = "^2.3.4"
email-validator = "^2.2.0"
python-jose = {extras = ["cryptography"], version = "^3.1"}
bcrypt = "^4.0"
python-multipart = "^0.0.6"
python-dotenv = "^1.1.0"
passlib = "^1.7.4"
reportlab = "^4.0"

[tool.poetry.dev-dependencies]
pytest = "^8.4"
httpx = "^0.26"
pytest-asyncio = "^0.23.8"
black = "^24.3"
ruff = "^0.0.285"

[build-system]
requires = ["poetry-core>=1.6.0"]
build-backend = "poetry.core.masonry.api"
